--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,7 @@
+@import '~tailwindcss/base.css';
+@import '~tailwindcss/components.css';
+@import '~tailwindcss/utilities.css';
+
 html,
 body {
   padding: 0;
